[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weegit-ORCID-0009-0008-6158-2311-master-thesis-organoids"
version = "0.6.2"
description = "Tools from a master's thesis for processing data obtained from iPSC-derived neuronal spheroids."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Aleksandr", email = "sasha.k.1618@gmail.com"},
]

dependencies = [
    "PyQt6>=6.4.2",
    "scipy>=1.12.0",
    "numpy~=2.2.0",
]

[project.urls]
"Author (Aleksandr)" = "https://github.com/sasha1618"

[tool.setuptools.packages.find]
where = ["."]
include = ["weegit_add_ons*"]
namespaces = true

[project.entry-points."weegit.add_ons"]
preprocessing_pipeline = "weegit_add_ons.organoids.preprocessing_pipeline:PreprocessingPipelineAddOn"
spike_detection = "weegit_add_ons.organoids.spike_detection:SpikeDetectionAddOn"
spike_viewer = "weegit_add_ons.organoids.spike_viewer:SpikesViewerAddOn"
visualisation = "weegit_add_ons.organoids.visualisation:VisualisationAddOn"
jupyter_generator = "weegit_add_ons.organoids.jupyter_generator:JupyterGeneratorAddOn"
