[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular_NI"
version = "0.6.2"
description = "Finds spikes by threshold and draws them in signal traces."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Aleksandr", email = "sasha.k.1618@gmail.com"},
    {name = "Anatoliy"},
]

dependencies = [
    "PyQt6>=6.4.2",
    "scipy>=1.12.0",
    "numpy~=2.2.0",
]

[project.urls]
"Author (Aleksandr)" = "https://github.com/sasha1618"

[tool.setuptools]
py-modules = ["analog_events", "csd", "spikes", "digital_events"]

[project.entry-points.add_ons]
spikes = "spikes:SpikesAddOn"
csd = "csd:CSDAddOn"
analog_events = "analog_events:AnalogEventsAddOn"
digital_events = "digital_events:DigitalEventsAddOn"
