[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weegit_spikes"
version = "0.6.1"
description = "Finds spikes by threshold and draws them in signal traces."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sasha1618", email = "sasha.k.1618@gmail.com"},
]
dependencies = [
    "PyQt6>=6.4.2",
    "scipy>=1.12.0",
    "numpy~=2.2.0",
]

[tool.setuptools]
py_modules = ["analog_events", "csd", "spikes", "digital_events"]

[project.entry-points.add_ons]
spikes = "spikes:SpikesAddOn"
csd = "csd:CSDAddOn"
analog_events = "analog_events:AnalogEventsAddOn"
digital_events = "digital_events:DigitalEventsAddOn"






