[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weegit-add-on-organoids"
version = "0.6.2"
description = "Finds spikes by threshold and draws them in signal traces."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Aleksandr", email = "sasha.k.1618@gmail.com"},
]

dependencies = [
    "PyQt6>=6.4.2",
    "scipy>=1.12.0",
    "numpy~=2.2.0",
]

[project.urls]
"Author (Aleksandr)" = "https://github.com/sasha1618"

[tool.setuptools.packages.find]
where = ["."]
include = ["weegit_add_ons*"]
namespaces = true

[project.entry-points."weegit.add_ons"]
spikes_detector = "weegit_add_ons.add_on_organoids.spikes_detector:SpikesDetectorAddOn"
spikes_viewer = "weegit_add_ons.add_on_organoids.spikes_viewer:SpikesViewerAddOn"
signal_plot = "weegit_add_ons.add_on_organoids.signal_plot:SignalPlotAddOn"
raster_plot = "weegit_add_ons.add_on_organoids.raster_plot:RasterPlotAddOn"
aligned_spikes_plot = "weegit_add_ons.add_on_organoids.aligned_spikes_plot:AlignedSpikesPlotAddOn"
jupyter_notebook_generator = "weegit_add_ons.add_on_organoids.jupyter_notebook_generator:JupyterNotebookGeneratorAddOn"
spectogram_plot = "weegit_add_ons.add_on_organoids.spectogram_plot:SpectogramPlotAddOn"
burst_detector = "weegit_add_ons.add_on_organoids.burst_detector:BurstDetectorAddOn"
network_burst_detector = "weegit_add_ons.add_on_organoids.network_burst_detector:NetworkBurstDetectorAddOn"
synchrony_connectivity = "weegit_add_ons.add_on_organoids.synchrony_connectivity:SynchronyConnectivityAddOn"
reverberation_detector = "weegit_add_ons.add_on_organoids.reverberation_detector:ReverberationDetectorAddOn"
spike_field_coupling = "weegit_add_ons.add_on_organoids.spike_field_coupling:SpikeFieldCouplingAddOn"
propagation_leader_analysis = "weegit_add_ons.add_on_organoids.propagation_leader_analysis:PropagationLeaderAnalysisAddOn"
